webdev/style.css
/* ... */
/**
   * 1. Correct the odd appearance in Chrome and Safari.
   * 2. Correct the outline style in Safari.
   */

[type="search"] {
  -webkit-appearance: textfield;
  /* 1 */
  outline-offset: -2px;
  /* 2 */
}

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
   * Remove the inner padding in Chrome and Safari on macOS.
   */

/**
   * 1. Correct the inability to style clickable types in iOS and Safari.
   * 2. Change font properties to `inherit` in Safari.
   */

::-webkit-file-upload-button {
  -webkit-appearance: button;
  /* 1 */
  font: inherit;
  /* 2 */
}

/* Interactive
     ========================================================================== */

/*
   * Add the correct display in Edge, IE 10+, and Firefox.
   */

details {
  display: block;
}

/*
   * Add the correct display in all browsers.
   */

summary {
  display: list-item;
}

/* Misc
     ========================================================================== */

/**
   * Add the correct display in IE 10+.
   */

template,
[hidden] {
  display: none;
}

/**
   * Add the correct display in IE 10.
   */

@font-face {
  font-family: "Roboto-Bold";
  font-display: swap;
  src: url("./assets/fonts/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Roboto-Light";
  font-display: swap;
  src: url("./assets/fonts/Roboto-Light.woff") format("woff"), url("../fonts/Roboto-Light.woff2") format("woff2");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Roboto-Black";
  font-display: swap;
  src: url("./assets/fonts/Roboto-Black.woff") format("woff"), url("../fonts/Roboto-Black.woff2") format("woff2");
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: "Roboto-Medium";
  font-display: swap;
  src: url("./assets/fonts/Roboto-Medium.woff") format("woff"), url("../fonts/Roboto-Medium.woff2") format("woff2");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Roboto-Regular";
  font-display: swap;
  src: url("./assets/fonts/Roboto-Regular.woff") format("woff"), url("../fonts/Roboto-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Roboto-Thin";
  font-display: swap;
  src: url("./assets/fonts/Roboto-Thin.woff") format("woff"), url("../fonts/Roboto-Thin.woff2") format("woff2");
  font-weight: 100;
  font-style: normal;
}

.section_your-life {
  background-image: url("./assets/images/your-bg.jpg");
  padding-top: 230px;
}

.section_subscribe {
  background-image: url("./assets/images/subscribe-bg.jpg");
}

.section__title {
  font: 24px/28px Roboto-Bold, Arial, Helvetica, sans-serif;
  text-transform: uppercase;
  letter-spacing: 1px;
  max-width: 385px;
  margin-bottom: 20px;
}

.section__title_color-grey {
  color: #373737;
}

.section__title_color-white {
  color: #fff;
}

.section__subtitle {
  font: 14px/19.6px Roboto-Regular, Arial, Helvetica, sans-serif;
  color: #4E4E4E;
  max-width: 405px;
  margin-bottom: 30px;
}

.section_wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 120px 0 135px 135px;
}

.section__left-column {
  padding-top: 155px;
  margin-right: 250px;
}

.section__right-column {
  padding-top: 180px;
  margin-left: 140px;
}

.container {
  max-width: 1280px;
  /*первоначальный 1060 и накинули по 15пикс с двух сторон, чтобы не прилипал*/
  width: 100%;
  margin: 0 auto;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.button-main {
  width: 185px;
  height: 45px;
  display: block;
  background-color: #00AFDB;
  border: none;
  color: #fff;
  font: 14px/16px Roboto-Bold, Arial, Helvetica, sans-serif;
  text-transform: uppercase;
  cursor: pointer;
  border: 0;
  outline: 0;
}

.button-main_center {
  margin: 0 auto;
}

.button-main_checkmark {
  width: 65px;
  height: 45px;
}

.button-main_apple,
.button-main_android {
  position: relative;
  padding-right: 60px;
}

.button-main_apple:before,
.button-main_android:before {
  content: '';
  width: 60px;
  height: 45px;
  background-color: #009CC2;
  background-repeat: no-repeat;
  background-position: center;
  position: absolute;
  right: 0;
  top: 0;
}

.button-main_apple:before {
  background-image: url("./assets/images/fa-apple.svg");
}

.button-main_android:before {
  background-image: url("./assets/images/fa-android.svg");
}

.button-main:hover {
  background-color: #009CC2;
}

.header {
  display: block;
  background-color: #000;
  position: absolute;
  width: 100%;
  top: 0;
}

.header__item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
  max-width: 770px;
  margin: 0 auto;
}

.header__list {
  display: inline-block;
}

.header__link {
  color: #fff;
  font: 14px/19px Roboto-Regular, Arial, Helvetica, sans-serif;
  display: block;
  margin: 40px 0;
  border-bottom: 2px solid transparent;
}

.header__link:hover,
.header__link_active {
  font: 14px/19px Roboto-Medium, Arial, Helvetica, sans-serif;
  border-color: #fff;
  -webkit-transition: .7s;
  -o-transition: .7s;
  transition: .7s;
}

.header__link:before {
  display: block;
  content: attr(title);
  font: 14px/19px Roboto-Medium, Arial, Helvetica, sans-serif;
  height: 0;
  overflow: hidden;
  visibility: hidden;
}

.header__logo {
  padding: 23px 0;
}

.welcome__wrapper {
  padding-left: 55px;
}

.welcome-title {
  color: #fff;
  font: 64px/75px Roboto-Bold, Arial, Helvetica, sans-serif;
  text-transform: uppercase;
  letter-spacing: 4.5px;
  text-align: center;
}

.welcome-subtitle {
  color: #fff;
  font: 18px/25px Roboto-Regular, Arial, Helvetica, sans-serif;
  text-align: center;
  height: 60px;
  max-width: 450px;
  overflow: hidden;
  margin: 20px auto;
  -o-text-overflow: clip;
     text-overflow: clip;
}
/* ... */

